# DjenisAiAgent

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CHANGES_DETAILED.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FINAL_SUMMARY.md  IMPROVEMENTS.md  LICENSE  Makefile  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  SECURITY.md  SUPPORT.md  clean.ps1  demo_perception.py  docker-compose.yml  index.html  launch_ui.py  logger.py  main.py  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt  setup.ps1  setup.py  test_agent.py  test_ai_window_focus.py  test_perception.py  test_ui_tree_detail.py  test_websocket.py  ui_automation.py  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/rulesets/: README.md  immutable-v-tags.json
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  pages.yml
config/: credentials.json.template  default_config.json  default_config.json.template  prompt_templates.json
data/: ui_patterns.json
docs/: README.md  api-reference.md  architecture.md  faq.md  getting-started.md
robot/: LinuxAgent.py  tasks.robot
scripts/: publish_github_release.py  release_registry.py  validate_release.py  validate_site.py  verify_github_tag.py
site/: app.js  index.html  styles.css
src/: __init__.py  agent_core.py  audit.py  config.py  exceptions.py  main.py  redaction.py  runtime_state.py  web_security.py
src/abstractions/: display_adapter.py  input_controller.py  screen_capture.py
src/action/: __init__.py  browser_tools.py  permissions.py  tools.py
src/automation/: __init__.py  ui_automation.py  window_manager.py
src/config/: config.py
src/core/: __init__.py  actions.py  agent.py  executor.py  gemini_client.py  prompts.py  target_locator.py  ui_overlay.py
src/gemini/: client.py  prompt_manager.py  prompt_manager_new.py
src/memory/: short_term_memory.py  task_memory.py  ui_memory.py
src/orchestration/: __init__.py  agent_loop.py
src/perception/: __init__.py  audio_transcription.py  enhanced_screen_analyzer.py  screen_analyzer.py  screen_capture.py  wayland_capture.py  win11_capture.py
src/planning/: planner.py  schemas.py
src/reasoning/: __init__.py  gemini_core.py  system_prompt.txt
src/robot/: LinuxAgent.py  tasks.robot
src/tests/: test_agent.py  test_ai_window_focus.py  test_focus_strategy.py  test_integration.py  test_mouse_movement.py  test_ocr_integration.py  test_prompt_improvements.py  test_setup.py  test_step_logic.py
src/tools/: base_tool.py  file_system_tool.py  gui_tool.py  mcp_tool.py  powershell_tool.py  shell_tool.py  task_completed_tool.py  wayland_input.py  win11_input.py
src/ui/: __init__.py  agent_ui.py
src/utils/: __init__.py  ocr.py  screen_utils.py  system_apps.py
tests/: conftest.py  test_agent_core.py  test_perception.py  test_tools.py
tests/unit/: test_agent_e2e_contract.py  test_agent_loop.py  test_audio_transcription.py  test_browser_tools.py  test_config.py  test_exceptions.py  test_gemini_core.py  test_github_release.py  test_main.py  test_permissions.py  test_privileged_tools.py  test_project_site.py  test_redaction.py  test_release_contract.py  test_release_registry.py  test_repository_policy.py  test_screen_capture.py  test_tools_helpers.py  test_web_security.py
web/: __init__.py
web/static/: app.js  index.html  styles.css
